# agent

./: .env  .env.example  .gitignore  MIGRATION_PARITY_CHECKLIST.md  README.md  external_tools.example.json  mcp_servers.example.json  milvus.py  pyproject.toml  start_server.sh
app/: main.py
app/autotune/: __init__.py  langgraph_loop.py  loop.py  schemas.py  utils.py
app/autotune/adapters/: __init__.py  diffgui.py  diffusion.py  evaluators.py
app/autotune/agents/: __init__.py  critic.py  executor.py  scientist.py
app/core/: settings.py
app/models/: schemas.py
app/services/: aiops_service.py  content_creator_service.py  dashscope_client.py  document_chunker.py  mcp_client.py  modelscope_reranker.py  session_store.py  tools.py  upload_task_store.py  vector_store.py  xhs_agent.py
autotune_outputs/: langgraph_history.jsonl
examples/: pocket.example.json
scripts/: benchmark_upload.py  compare_upload_benchmarks.py  run_autotune_langgraph.py  run_autotune_loop.py  run_content_creator_agent.py  run_xhs_agent.py  smoke_test.sh  smoke_test_xhs.sh  test_external_tools.sh  test_mcp_sse_tools.sh  test_mcp_tools.sh
super_biz_agent_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_xhs_agent.py
