[project]
name = "super-biz-agent-py"
version = "0.1.0"
description = "Python 版本 SuperBizAgent"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.20",
  "httpx>=0.28.0",
  "sse-starlette>=2.1.3",
  "pymilvus>=2.6.0",
  "zai-sdk==0.2.2"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
